test: ✅ refatorar `FutureInstallmentProjectionTest` para usar `getFirst()`